--- a/medibot.html
+++ b/medibot.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Bot Chat</title>
 
-    <link href="./botchat.css" rel="stylesheet" />
+    <link href="botchat.css" rel="stylesheet" />
 
     <style>
       .example {
@@ -53,10 +53,10 @@
 
     <div id="BotChatGoesHere"></div>
 
-    <script src="./botchat.js"></script>
+    <script src="botchat.js"></script>
 
     <!-- If you do not want to use Cognitive Services library, comment out the following line -->
-    <script src="./CognitiveServices.js"></script>
+    <script src="CognitiveServices.js"></script>
 
     <script>
       const params = BotChat.queryParams(location.search);
